fixed vertical overflow issue

--- a/src/styles/components/_user-data-form.scss
+++ b/src/styles/components/_user-data-form.scss
@@ -15,18 +15,17 @@
 
         >div {
             width: 100vw;
-            padding: 15px;
+            padding: 10px;
             @include center;
 
             @include tablet {
-                padding: 15px 40px;
+                padding: 10px 40px;
             }
 
             h2 {
                 font-size: 1.5em;
                 text-align: center;
-                margin-top: 1em;
-                margin-bottom: 2em;
+                margin-bottom: 1em;
                 color: #2e2d32;
 
                 @include tablet() {
